added the glossary

--- a/glossary.tex
+++ b/glossary.tex
@@ -129,8 +129,7 @@
 
 % --- telescopes & surveys
 \newglossaryentry{2mass}{name=2MASS,description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
-\newglossaryentry{wifes}{name=WIFES, text=\textsc{WiFeS}, first={\textsc{WiFeS} \citep{2007Ap&SS.310..255D}} description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
-\newcommand{\twomass}{\gls{2mass}}
+\newglossaryentry{wifes}{name=WIFES, text=\textsc{WiFeS}, first={\textsc{WiFeS} \citep{2007Ap&SS.310..255D}},  description={Wide Field Spectrograph - \gls{ifu} mounted on the 2.3\,m telescope at Siding Spring Observatory}}
 \newglossaryentry{scp}{name=SCP,description={Supernova Cosmology Project, led by Saul Perlmutter}, first={Supernova Cosmology Project (SCP)}}
 \newglossaryentry{hzsns}{name=HZSNS,description={High Z Supernova Search, led by Brian Schmidt}, first={High Z Supernova Search (HZSNS)}}
 \newglossaryentry{vlt}{name=VLT,description={Very Large Telescope located on Cerro Paranal (Chile)}, first={Very Large Telescope (VLT)}}
@@ -163,7 +162,6 @@
 \newglossaryentry{rosat}{name=ROSAT, description={short for R\"{o}ntgensatellit}, first={ROSAT}}
 \newglossaryentry{hete2}{name=HETE2, description={High Energy Transient Explorer}, first={High Energy Transient Explorer (HETE)}}
 \newglossaryentry{gnirs}{name=GNIRS, description={Gemini Near InfraRed Spectrograph mounted on the Gemini North Telescope}}
-\newglossaryentry{wifes}{name=WiFeS, description={Wide Field Spectrograph - \gls{ifu} mounted on the 2.3\,m telescope at Siding Spring Observatory}}
 \newglossaryentry{swift}{name=Swift, description={Swift Gamma-Ray Burst Mission}}
 \newglossaryentry{vla}{name=VLA, description={Very Large Array radio telescope located in North America}, first={Very Large Array (VLA)}}
 \newglossaryentry{evla}{name=EVLA, description={Extended Very Large Array radio telescope located in North America}, first={Extended Very Large Array (EVLA)}}
