added dolphot and signalnoise

--- a/glossary.tex
+++ b/glossary.tex
@@ -94,6 +94,7 @@
 \newglossaryentry{psf}{name=PSF,description={Point Spread Function},first = {PSF}}
 \newglossaryentry{fwhm}{name=FWHM,description={Full Width Half Maximum},first = {FWHM}}
 \newglossaryentry{rms}{name=RMS,description={Root Mean Square},first = {RMS}}
+\newglossaryentry{signalnoise}{name=S/N,description={signal to noise}}
 \newglossaryentry{uv}{name=UV,description={ultra violet},first = {ultra violet (UV)}}
 \newglossaryentry{halpha}{name=\ensuremath{\textrm{H}\alpha}, description={First line of the Balmer series at 6563\,\AA}, sort=halpha}
 \newglossaryentry{mgb}{name={Mg \textsc{i} b}, description={Triplet at 5167\,\AA, 5173\,\AA and 5184\,\AA}}
@@ -126,7 +127,7 @@
 \newglossaryentry{makee}{name=MAKEE,text=\textsc{makee}, description={MAuna Kea Echelle Extraction by Tom Barlow available}}% at \verb+http://spider.ipac.caltech.edu/staff/tab/makee/index.html+}}
 \newglossaryentry{minuit}{name=MINUIT,text={\textsc{minuit}}, description={collection of numerical optimization tools \citep{James:1975dr}}}
 \newglossaryentry{migrad}{name=MIGRAD,text={\textsc{migrad}}, description={numerical gradient optimization tools - part of \gls{minuit}}}
-
+\newglossaryentry{dolphot}{name=DOLPHOT, text=DOLPHOT, description=photometry package for HST, first=DOLPHOT \citep{2000PASP..112.1383D}}
 % --- telescopes & surveys
 \newglossaryentry{2mass}{name=2MASS,description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
 \newglossaryentry{wifes}{name=WIFES, text=\textsc{WiFeS}, first={\textsc{WiFeS} \citep{2007Ap&SS.310..255D}},  description={Wide Field Spectrograph - \gls{ifu} mounted on the 2.3\,m telescope at Siding Spring Observatory}}
