added chianti and syn++

--- a/glossary.tex
+++ b/glossary.tex
@@ -128,6 +128,9 @@
 \newglossaryentry{minuit}{name=MINUIT,text={\textsc{minuit}}, description={collection of numerical optimization tools \citep{James:1975dr}}}
 \newglossaryentry{migrad}{name=MIGRAD,text={\textsc{migrad}}, description={numerical gradient optimization tools - part of \gls{minuit}}}
 \newglossaryentry{dolphot}{name=DOLPHOT, text=DOLPHOT, description=photometry package for HST, first=DOLPHOT \citep{2000PASP..112.1383D}}
+\newglossaryentry{chianti}{name=CHIANTI, text=CHIANTI, description= CHIANTI Database 7.1, first =CHIANTI 7.1 \citep{1997A&AS..125..149D,2012ApJ...744...99L}}
+\newglossaryentry{synpp}{name=SYNPP, text=SYN++, description= SYN++ software, first =SYN++ \citep{2011PASP..123..237T}}
+
 % --- telescopes & surveys
 \newglossaryentry{2mass}{name=2MASS,description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
 \newglossaryentry{wifes}{name=WIFES, text=\textsc{WiFeS}, first={\textsc{WiFeS} \citep{2007Ap&SS.310..255D}},  description={Wide Field Spectrograph - \gls{ifu} mounted on the 2.3\,m telescope at Siding Spring Observatory}}
