added \ion to glossary

--- a/glossary.tex
+++ b/glossary.tex
@@ -85,7 +85,7 @@
 \newcommand{\cofiftysix}{$^{56}\textrm{Co}$}
 \newcommand{\fefiftysix}{$^{56}\textrm{Fe}$}%
 \newcommand{\nucl}[2]{\ensuremath{^{#2}\textrm{#1}}}
-
+\makeatletter \newcommand{\ion}[2]{#1 \textsc{\@roman{#2}}} \makeatother
 
 % ------- BEGIN GLOSSARY ------------
 
