more edits from 11fe

--- a/glossary.tex
+++ b/glossary.tex
@@ -80,7 +80,7 @@
 
 \newglossaryentry{angstrom}{name=\AA, description={unit of length $10^{-10}$\,m}, sort=angstrom}
 \newglossaryentry{nir}{name=NIR,description={near infrared},first = {near infrared (NIR)}}
-\newglossaryentry{psf}{name=PSF,description={Point Spread Function},first = {PSF}}
+\newglossaryentry{psf}{name=PSF,description={point-spread function},first = {point-spread function (PSF)}}
 \newglossaryentry{fwhm}{name=FWHM,description={Full Width Half Maximum},first = {FWHM}}
 \newglossaryentry{rms}{name=RMS,description={Root Mean Square},first = {RMS}}
 \newglossaryentry{signalnoise}{name=S/N,description={signal to noise}}
@@ -96,7 +96,7 @@
 \newglossaryentry{lsr}{name={LSR}, description={Local Standard of Rest}, first={\textit{local standard of rest} (LSR)}}
 \newglossaryentry{mc}{name={MC}, description={Monte Carlo}, first={\textit{Monte Carlo} (MC)}}
 \newglossaryentry{wcs}{name={WCS}, description={world coordinate system}, first={world coordinate system (WCS)}}
-\newglossaryentry{cmf}{name=CMF, text=CMF, first=Comoving Frame (CMF henceforth)}
+\newglossaryentry{cmf}{name=CMF, text=CMF, first=Comoving Frame (CMF henceforth), description={Comoving Frame}}
 \newcommand{\dmb}[1][15]{\ensuremath{\Delta\,m_{#1}(B)}}
 
 
@@ -134,7 +134,7 @@
 
 % ------------------------ telescopes & surveys ----------------
 \newglossaryentry{2mass}{name=2MASS,description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}, first={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
-\newglossaryentry{nomad}{name=NOMAD,first={Naval Observatory Merged Astrometric Dataset \citep[NOMAD; ][]{2005yCat.1297....0Z}}}
+\newglossaryentry{nomad}{name=NOMAD,first={Naval Observatory Merged Astrometric Dataset \citep[NOMAD; ][]{2005yCat.1297....0Z}}, description={Naval Observatory Merged Astrometric Dataset}}
 \newglossaryentry{wifes}{name=WIFES, text=\textsc{WiFeS}, first={\textsc{WiFeS} \citep{2007Ap&SS.310..255D}},  description={Wide Field Spectrograph - \gls{ifu} mounted on the 2.3\,m telescope at Siding Spring Observatory}}
 \newglossaryentry{scp}{name=SCP,description={Supernova Cosmology Project, led by Saul Perlmutter}, first={Supernova Cosmology Project (SCP)}}
 \newglossaryentry{hzsns}{name=HZSNS,description={High Z Supernova Search, led by Brian Schmidt}, first={High Z Supernova Search (HZSNS)}}
@@ -237,7 +237,7 @@
 \newcommand{\sneii}{\glspl{snii}}
 \newcommand{\snii}{\gls{snii}}
 
-\newglossaryentry{sniib}{name=Type~IIb, text={SN~IIb}, description={Spectrum shows hydrogen and helium lines},first={Type~IIb supernova (SN~IIb)}, firstplural={Type~IIb supernovae (SNe~IIb)}, plural={SNe~IIb}, see=snib, parent=snii}
+\newglossaryentry{sniib}{name=Type~IIb, text={SN~IIb}, description={Spectrum shows hydrogen and helium lines},first={Type~IIb supernova (SN~IIb)}, firstplural={Type~IIb supernovae (SNe~IIb)}, plural={SNe~IIb}, parent=snii}
 \newcommand{\sneiib}{\glspl{sniib}}
 \newcommand{\sniib}{\gls{sniib}}
 
