--- a/glossary.tex
+++ b/glossary.tex
@@ -147,7 +147,12 @@
 \newglossaryentry{pyne}{name=PYNE, text=\textsc{pyne}, description= PYNE code, first = {\textsc{pyne} \citep{Scopatz2012a}}}
 \newglossaryentry{multinest}{name=MULTINEST, text=\textsc{MultiNest}, description=MultiNest, first={\textsc{MultiNest} \citep{2009MNRAS.398.1601F}}}
 
-% -------------------------------------
+
+% ------------------- Services ---------------------
+
+\newglossaryentry{ads}{name=ADS, text=ADS, description=NASA ADS, first={NASA Astrophysics Data System \citep{2000A&AS..143...41K}}}
+
+
 
 % ------------------------ telescopes & surveys ----------------
 \newglossaryentry{2mass}{name=2MASS,description={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}, first={Two Micron All Sky Survey \citep{2006AJ....131.1163S}}}
