--- a/glossary.tex
+++ b/glossary.tex
@@ -117,7 +117,8 @@
 \newglossaryentry{ipython}{name=ipython, text=\textsc{ipython}, description=\textsc{ipython} framework, first = \textsc{ipython} \citep{perez2007ipython}}
 \newglossaryentry{jupyter}{name=jupyter, text=\textsc{jupyter}, description=\textsc{jupyter} framework, first = \textsc{jupyter} \citep{kluyver2016jupyter,perez2015project,ragan2014jupyter}}
 \newglossaryentry{aplpy}{name=aplpy, text=\textsc{aplpy}, description=\textsc{aplpy} framework, first = \textsc{aplpy} \citep{2012ascl.soft08017R}}
-
+\newglossaryentry{nltk}{name=nltk, text=\textsc{nltk}, description=\textsc{nltk} framework, first = Natural Language ToolKit \citep[\textsc{NLTK};][]{bird2009natural}}
+\newglossaryentry{scikit-learn}{name=scikit-learn, text=\textsc{scikit-learn}, description=\textsc{scikit-learn} framework, first = \textsc{scikit-learn} \citep[][]{scikit-learn}}
 \newglossaryentry{moog}{name=MOOG,text={\textsc{moog}}, description={spectral synthesis software \citep{1973ApJ...184..839S}}, first={\textsc{Moog} \citep{1973ApJ...184..839S}}}
 \newglossaryentry{atlas9}{name=ATLAS9,description={grid of stellar atmospheres \citep{2004astro.ph..5087C}}, first={ATLAS9 \citep{2004astro.ph..5087C}}}
 \newglossaryentry{vald}{name=VALD,description={Vienna Atomic Line Database \citep{2000BaltA...9..590K}}, first={Vienna Atomic Line Database \citep[VALD;][]{2000BaltA...9..590K}}}
